# Autonomous-Parking-Robot-MAR-Project

./: README.md  package.xml  setup.py
launch/: parking_sim.launch.py
parking_robot/: __init__.py  parking_node.py
urdf/: robot.urdf
worlds/: parking_lot.world
